<resources>
    <string name="app_name">GOALS</string>
    <!--login-->
    <string name="Login">Login</string>
    <string name="Login_Logo">Logo</string>
    <string name="Login_ID">ID</string>
    <string name="Login_Password">Password</string>
    <string name="Login_google">Google</string>
    <string name="Login_sign_up">Sign Up</string>
    <!--main-->
    <string name="Main_List">List</string>
    <string name="Main_CheckIn">CheckIn</string>
    <string name="Main_CheckIn_c">打卡</string>
    <string name="Main_Home">Home</string>
    <string name="Main_Home_c">首頁</string>
    <string name="Main_Goal">Goal</string>
    <string name="Main_Goal_c">目標</string>
    <string name="Main_Sort">Sort</string>
    <string name="Main_Sort_c">分類</string>
    <string name="Main_Act">Activity</string>
    <string name="Main_Act_c">活動</string>
    <string name="Main_User">User</string>
    <string name="Main_User_c">個人頁面</string>
    <string name="Main_Title_1">活動資訊</string>
    <string name="Main_Title_2">目標</string>
    <string name="Main_Setting_c">設定</string>
    <string name="Main_Nav_Sort_c">分類版面</string>
    <string name="Main_Logout_c">登出</string>
    <!--home-->
    <string name="Home_Banner">banner</string>
    <string name="Home_Friend_c">好友動態</string>
    <string name="Home_Post_Image">圖片</string>
    <string name="Home_Post_Content">今天我在大佳河濱公園和大家一起跑了
10公里，大家都好努力的完成自己訂的
目標，我很感動～</string>
    <string name="Home_Post_Time">16:41</string>
    <!--check-->
    <string name="Check_Goal_c">參加目標</string>
    <string name="Check_Location_c">地點</string>
    <string name="Check_Edit_c">請輸入內文</string>
    <string name="Check_Share_c">分享</string>
    <!--goal-->
    <string name="Goal_join_c">加入</string>
    <string name="Goal_Item_member_c">參加人數</string>
    <string name="Goal_Item_author_c">發起人</string>
    <string name="Goal_joined_c">已加入</string>
    <string name="Goal_Item_Title_1">每天跑10KM</string>
    <string name="Goal_Item_Subtitle_1">大家一起每天跑10KM</string>
    <string name="Goal_Item_Time_1">2020/10/01~2020/10/31</string>
    <string name="Goal_Item_Location">地點</string>
    <string name="n_a">N/A</string>
    <!--goal_new-->
    <string name="Goal_cancel_c">取消參加</string>
    <string name="Goal_new_item">新增目標</string>
    <string name="Goal_new_item_c">新增</string>
    <string name="Goal_new_title_c">請輸入標題</string>
    <string name="Goal_new_subtitle_c">請輸入副標題</string>
    <string name="Goal_new_start_date_c">開始日期</string>
    <string name="Goal_new_end_date_c">結束日期</string>
    <string name="Goal_new_context_c">請輸入說明內容</string>
    <string name="Goal_new_location_c">請輸入地點</string>
    <string name="Goal_new_max_member_c">請輸入最大人數</string>
    <string name="Goal_new_img_c">選擇照片</string>
    <string name="Goal_new_img_text_c">尚未選擇照片</string>
    <string name="Goal_search_c">搜尋</string>
    <!--act-->
    <string name="Act_join_c">報名</string>
    <string name="Act_joined_c">已報名</string>
    <string name="Act_cancel_c">取消報名</string>
    <string name="Act_Item_Title_1">2020愛花蓮做環保全民ha健走</string>
    <string name="Act_Item_Time">Time</string>
    <string name="Act_Item_Time_1">2020–10–17（15:30～18:30）</string>
    <string name="Act_Item_Location">Location</string>
    <string name="Act_Item_Location_c">地點</string>
    <string name="Act_Item_Location_1">花蓮太平洋公園曙光廣場–海濱街</string>
    <string name="Act_Item_Cost_c">費用資訊</string>
    <string name="Act_Item_Cost_1">免費</string>
    <string name="Act_Item_Count_c">活動場次</string>
    <string name="Act_Item_Count_1">此活動只有一個場次時間</string>
    <!--user-->
    <string name="User_noItem_c">沒有紀錄喔~</string>
    <string name="User_MyGoals_c">我的目標</string>
    <string name="User_MyGoals_Now_c">現在目標</string>
    <string name="User_MyActs_Will_c">將參加活動</string>
    <string name="User_MyGoals_Past_c">過去目標</string>
    <string name="User_MyActs_Past_c">過去活動</string>
    <string name="User_Friend_c">好友</string>
    <string name="User_Friend_plus_c">加好友</string>
    <string name="User_Friend_Yet_c">可能認識的</string>
    <!--sort-->
    <string name="Sort_c">有興趣的運動</string>
    <string name="Sort_Ball_c">球類</string>
    <string name="Sort_Aerobic_c">有氧</string>
    <string name="Sort_Outdoor_c">室外</string>
    <string name="Sort_Indoor_c">室內</string>
    <string name="Sort_Water_c">水上</string>
    <!--sort_item-->
    <string name="Sort_Item_post_num_c">每週有31則貼文</string>
    <string name="Sort_Item_subtitle_c">本版提供各式球類技巧討論、經驗分享或球類運動傷害， 都可在此發文討論～</string>
    <string name="Sort_item_Hot_c">熱門</string>
    <string name="Sort_Item_New_c">最新</string>
    <!--post-->
    <string name="Post_More_c">更多</string>
    <string name="Post_Heart_c">喜歡</string>
    <string name="Post_Reply_c">回應</string>
    <string name="Post_Save_c">收藏</string>
    <string name="Post_Report_c">檢舉</string>
    <!--other-->
    <string name="content">Content</string>
    <!--setting-->
    <string name="Setting_Person_c">個人設定</string>
    <string name="Setting_Friend_c">好友設定</string>
    <string name="Setting_Private_c">隱私</string>
    <string name="Setting_Notification_c">提醒</string>

</resources>