<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUser"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/Login_Logo"
        app:srcCompat="@drawable/goals_logo" />

    <EditText
        android:id="@+id/login_Username"
        style="@style/Login_EditText"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:autofillHints="@string/Login_ID"
        android:layout_marginBottom="@dimen/margin_login_24dp"
        android:ems="10"
        android:hint="@string/Login_ID"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_Password"
        style="@style/Login_EditText"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:autofillHints="@string/Login_Password"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/Login_Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login_button"
        style="@style/Login_Button"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/margin_login_24dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/login_Google_button"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/margin_login_24dp"
        android:background="@drawable/selector_login_google"
        android:text="@string/Login_google"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/login_Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_login_24dp"
        android:background="@color/white"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Login_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/deep_cyan"
        android:textSize="20sp"
        />


</LinearLayout>