<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GoalItemFragment"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/shape_goal_item_bg_5r">

        <TextView
            android:id="@+id/goal_item_title"
            style="@style/Goal_Title.item"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Goal_Item_Title_1"
            android:maxHeight="55dp"/>

        <Button
            android:id="@+id/goal_join_button"
            style="@style/Orange_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/goal_item_title"
            android:text="@string/Goal_join_c" />

        <ImageView
            android:id="@+id/goal_time_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal_item_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Act_Item_Time"
            app:srcCompat="@drawable/ic_time" />

        <TextView
            android:id="@+id/goal_item_Time"
            style="@style/Goal_Context.item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal_item_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/goal_time_img"
            android:text="@string/Goal_Item_Time_1" />

        <TextView
            android:id="@+id/goal_item_author"
            style="@style/Goal_Context.item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal_item_Time"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/Goal_Item_author_c" />


    </RelativeLayout>

</FrameLayout>