<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_purple" />

    <ImageView
        android:id="@+id/post_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginTop="@dimen/margin_post_9dp"
        android:contentDescription="@string/Main_User"
        app:srcCompat="@drawable/goal_user_icon_1" />

    <TextView
        android:id="@+id/post_user_name"
        style="@style/Goal_Context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/post_user_icon"
        android:layout_alignBottom="@+id/post_user_icon"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/post_user_icon"
        android:gravity="center"
        android:text="@string/Goal_Item_author_c" />

    <TextView
        android:id="@+id/post_title"
        style="@style/Post_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_user_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginTop="@dimen/margin_post_9dp"
        android:text="@string/Act_Item_Title_1" />

    <TextView
        android:id="@+id/post_context"
        style="@style/Post_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginEnd="@dimen/margin_post_9dp"
        android:layout_marginTop="@dimen/margin_post_9dp"
        android:text="@string/Act_Item_Time_1"
        android:maxLines="1"
        android:maxLength="20"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_post_9dp"
        android:layout_below="@id/post_context"/>
</RelativeLayout>