<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/home_post_user_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_goal_10dp"
        android:layout_marginTop="@dimen/margin_goal_10dp"
        android:contentDescription="@string/Main_User"
        android:src="@drawable/goal_user_icon_1" />

    <TextView
        android:id="@+id/home_post_user_name"
        style="@style/Home_Post_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_post_user_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/home_post_user_icon"
        android:text="@string/Main_User"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_post_user_name"
        android:layout_alignStart="@+id/home_post_user_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/Home_Post_Time"
        android:textColor="@color/light_purple"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/post_more"
        android:layout_width="@dimen/size_post_icon"
        android:layout_height="@dimen/size_post_icon"
        android:layout_alignTop="@+id/home_post_user_name"
        android:layout_alignBottom="@+id/home_post_user_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_goal_10dp"
        android:background="@color/white"
        android:contentDescription="@string/Post_More_c"
        android:src="@drawable/ic_more_horizontal" />

    <TextView
        android:id="@+id/home_post_content"
        style="@style/Home_Post_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_post_user_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_goal_10dp"
        android:text="@string/Home_Post_Content" />


    <ImageView
        android:id="@+id/home_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_post_content"
        android:layout_margin="@dimen/margin_goal_10dp"
        android:contentDescription="@string/Home_Post_Image"
        android:scaleType="centerCrop"
        android:src="@drawable/home_post_image" />

    <ImageButton
        android:id="@+id/post_heart"
        android:layout_width="@dimen/size_post_icon"
        android:layout_height="@dimen/size_post_icon"
        android:layout_below="@+id/home_post_image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginTop="@dimen/margin_post_9dp"
        android:background="@color/white"
        android:contentDescription="@string/Post_Heart_c"
        android:src="@drawable/selector_heart"
        android:tint="@color/deep_orange" />

    <TextView
        android:id="@+id/post_heart_text"
        style="@style/Goal_Context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_post_image"
        android:layout_alignTop="@+id/post_heart"
        android:layout_alignBottom="@+id/post_heart"
        android:layout_marginStart="@dimen/margin_post_5dp"
        android:layout_toEndOf="@id/post_heart"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/Post_Heart_c" />

    <ImageButton
        android:id="@+id/post_reply"
        android:layout_width="@dimen/size_post_icon"
        android:layout_height="@dimen/size_post_icon"
        android:layout_below="@+id/home_post_image"
        android:layout_marginStart="@dimen/margin_post_9dp"
        android:layout_marginTop="@dimen/margin_post_9dp"
        android:layout_toEndOf="@+id/post_heart_text"
        android:background="@color/white"
        android:contentDescription="@string/Post_Heart_c"
        android:src="@drawable/ic_chat_bubble_outline_black_24dp"
        android:tint="@color/deep_orange" />

    <TextView
        android:id="@+id/post_reply_text"
        style="@style/Goal_Context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_post_image"
        android:layout_alignTop="@+id/post_reply"
        android:layout_alignBottom="@id/post_reply"
        android:layout_marginStart="@dimen/margin_post_5dp"
        android:layout_toEndOf="@id/post_reply"
        android:gravity="center"
        android:text="@string/Post_Reply_c" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_goal_10dp"
        android:layout_below="@+id/post_reply_text" />


</RelativeLayout>